--- a/kclx.html
+++ b/kclx.html
@@ -52,14 +52,14 @@
                     <nav class="main-navigation">
                       <ul>
                         <li>
-                          <a href="index.html"> 主页</a>
+                          <a href="./index.html"> 主页</a>
                         </li>
-                        <li><a href="wjzp.html">往届作品</a></li>
+                        <li><a href="./wjzp.html">往届作品</a></li>
                         <li class="active">
-                          <a href="kclx.html">课程录像</a>
+                          <a href="./kclx.html">课程录像</a>
                         </li>
                         <li>
-                          <a href="xxzy.html">学习资源</a>
+                          <a href="./xxzy.html">学习资源</a>
                         </li>
                       </ul>
                     </nav>
