--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                           <a href="index.html"> 主页</a>
                         </li>
                         <li>
-                          <a target="_blank" href="/wjzp.html">往届作品</a>
+                          <a target="_blank" href="./wjzp.html">往届作品</a>
                         </li>
                         <li>
-                          <a target="_blank" href="/kclx.html">课程录像</a>
+                          <a target="_blank" href="./kclx.html">课程录像</a>
                         </li>
                         <li>
-                          <a href="#xxzy">学习资源</a>
+                          <a href="./xxzy.html">学习资源</a>
                         </li>
                       </ul>
                     </nav>
