--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   controls
                   autoplay
                   muted
-                  src="./assets/introduce.mp4"
+                  src="http://1255538920.vod2.myqcloud.com/101d01d2vodtranscq1255538920/d0bbd4d75285890809287294552/v.f20.mp4"
                 ></video>
                 <p>
                   《网页设计与制作》课程涉及到的内容有HTML标记语言、网页编辑、图像制作、动画制作等多方面的知识，具有很强的先进性；它是计算机网络、计算机应用、电子商务等专业的一门核心课程，还可作为其他专业的选修技能课程。在计算机网络专业课程体系中，《网页设计与制作》课程是一门核心专业基础课程，它是计算机导论、c语言程序设计、sql基础及应用等课程的先修课，其后续课程包括动态网页设计、java程序语言、jsp程序设计等。随着计算机网络的迅速发展，Internet已经成为我们生活中不可或缺的组成部分。企业利用网站来展示企业形象、推广产品并进行电子商务活动；个人建立一个具有独特风格的网站来展示自我；政府机构通过网站实现电子政务。因此搭建网站、设计精美的网页来吸引浏览者的目光，不再是一个孤立的问题，它成为了大家共同关注的目标。
