--- a/wjzp.html
+++ b/wjzp.html
@@ -32,7 +32,7 @@
                 <div class="logo-area">
                   <a href="index.html"
                     ><img
-                      src="http://www.gzcc.edu.cn/upload/images/2018/1/%E7%BD%91%E7%AB%99LOL.png"
+                      src="./images/images/logo.png"
                       style="
                         width: 140px;
                         padding: 5px;
@@ -54,7 +54,9 @@
                         <li>
                           <a href="./index.html"> 主页</a>
                         </li>
-                        <li class="active"><a href="./wjzp.html">往届作品</a></li>
+                        <li class="active">
+                          <a href="./wjzp.html">往届作品</a>
+                        </li>
                         <li>
                           <a href="./kclx.html">课程录像</a>
                         </li>
