--- a/kclx.html
+++ b/kclx.html
@@ -33,7 +33,7 @@
                 <div class="logo-area">
                   <a href="index.html"
                     ><img
-                      src="http://www.gzcc.edu.cn/upload/images/2018/1/%E7%BD%91%E7%AB%99LOL.png"
+                      src="./images/images/logo.png"
                       style="
                         width: 140px;
                         padding: 5px;
